hard-gists/5553364/run.log
=== Docker Run Log for 5553364 ===
Started at: Mi 29. Okt 15:45:19 CET 2025

[2025-10-29 15:45:19] START: Running container for 5553364
[2025-10-29 15:45:19] SUCCESS: Container 1ec65adf68ea4259fddb98d85b3a858c528e942f343c6faa12e4876d7616776b started for 5553364
=== Container logs for 5553364 ===
  File "/snippet.py", line 57
    print "\n--- NEW GAME ---"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5553364 ===
[2025-10-29 15:45:21] INFO: Container 1ec65adf68ea4259fddb98d85b3a858c528e942f343c6faa12e4876d7616776b has stopped
